--- a/code-generator-maker/pom.xml
+++ b/code-generator-maker/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.richard</groupId>
-    <artifactId>code-generator-basic</artifactId>
+    <artifactId>code-generator-maker</artifactId>
     <version>1.0-SNAPSHOT</version>
     <dependencies>
         <dependency>
@@ -16,7 +16,7 @@
         <dependency>
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-all</artifactId>
-            <version>5.8.16</version>
+            <version>5.8.25</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
